@@ -43,6 +43,8 @@ require 'active_support/ordered_hash'
 require 'active_support/ordered_options'
 require 'active_support/option_merger'
 
+require 'active_support/string_questioneer'
+
 require 'active_support/values/time_zone'
 require 'active_support/duration'
 
