@@ -1,0 +1,9 @@
+class StringQuestioneer < String
+  def method_missing(method_name, *arguments)
+    if method_name.to_s.ends_with?("?")
+      self == method_name.to_s[0..-2]
+    else
+      super
+    end
+  end
+end
