@@ -1,5 +1,7 @@
 *Edge*
 
+* Wrapped Rails.env in StringQuestioneer so you can do Rails.env.development? [DHH]
+
 * Fixed that RailsInfoController wasn't considering all requests local in development mode (Edgard Castro) [#310 state:resolved]
 
 
