@@ -1,5 +1,7 @@
 *Edge*
 
+* Added StringQuestioneer for doing things like StringQuestioneer.new("production").production? # => true and StringQuestioneer.new("production").development? # => false [DHH]
+
 * Fixed Date#end_of_quarter to not blow up on May 31st [#289 state:resolved] (Danger)
 
 
